page link updated

--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
       <div class="flex justify-between gap-4">
         <div class="bg-[#FFFFFF] mt-3 w-3/4 rounded-2xl p-2 shadow">
           <!-- top 3 cards -->
-          <div class="grid grid-flow-col-1 lg:grid-cols-3 lg:gap-4 gap-2 p-4">
+          <div class="flex gap-4 p-4">
             <div class="bg-[#F4F7FF] p-4 rounded-lg flex items-center gap-4">
               <div class="bg-[#FFFFFF] p-4 rounded-full w-14 h-14">
                 <img src="./assets/checkbox.svg" alt="" />
               </div>
               <div class="">
                 <p class="text-md font-medium">Task Assigned</p>
-                <p class="text-3xl font-bold">6</p>
+                <p class="text-3xl font-bold">06</p>
               </div>
             </div>
             <div
-              class="bg-gradient-to-r from-[#3752FD] via-[#6C7FFA] to-[#9BA8F8] flex justify-center items-center gap-3 p-4 rounded-lg text-white"
+              id="discover-div" class="bg-gradient-to-r from-[#3752FD] via-[#6C7FFA] to-[#9BA8F8] flex justify-center items-center gap-3 p-4 rounded-lg text-white"
             >
               <img src="./assets/fi_18577309.svg" class="h-20 w-20" alt="" />
-              <p class="text-[24px]">Discover Something New Today!</p>
+              <p class="text-[20px]">Discover Something New Today!</p>
             </div>
             <div
               class="bg-[#F4F7FF] p-4 rounded-lg flex items-center justify-center gap-4"
