--- a/blogs.html
+++ b/blogs.html
@@ -41,7 +41,7 @@
         </div>
         <div class="flex items-center gap-6">
             <button
-            class="mt-2 bg-[#3752FD] text-white px-4 py-2 rounded-lg"
+           id="back-btn"  class="mt-2 bg-[#3752FD] text-white px-4 py-2 rounded-lg"
           >
             Back to Desk
           </button>
@@ -49,6 +49,7 @@
       </div>
 
     </div>
+    <script src="./scripts/blogs.js"></script>
 </body>
 
 </html>
