--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
         },
       };
     </script>
+
+    <style>
+      .history-cards {
+        background-color: #f4f7ff;
+        border-radius: 8px;
+        padding: 10px;
+        color: black;
+        font-size: 14px;
+      }
+    </style>
   </head>
   <body id="main-body" class="bg-[#F4F7FF] p-4 font-poppins">
     <div class="container mx-auto p-6 rounded-xl">
@@ -34,7 +44,7 @@
       >
         <div class="flex items-center gap-4">
           <img class="h-12 w-12" src="./assets/logo.svg" alt="" />
-          <div class="text-4xl text-primaryText">
+          <div class="text-2xl text-primaryText">
             <span>Dev</span>
             <span class="font-bold">Board</span>
           </div>
@@ -44,12 +54,18 @@
             class="bg-[#F4F7FF] flex justify-center items-center gap-3 px-4 py-2 rounded-[32px] shadow-sm"
           >
             <img class="h-8 w-8" src="./assets/checkbox.svg" alt="" />
-            <span class="text-[2rem] font-bold">23</span>
+            <span id="total-tasks-count" class="text-[2rem] font-bold">23</span>
           </div>
           <button
-            id="bg-change-btn" class="w-16 h-16 bg-[#F4F7FF] p-2 rounded-full shadow-sm flex justify-center items-center relative"
+            id="bg-change-btn"
+            class="w-16 h-16 bg-[#F4F7FF] p-2 rounded-full shadow-sm flex justify-center items-center relative"
           >
-            <img id="rotateImg" src="./assets/theme.svg" class="transition-transform duration-400" alt="" />
+            <img
+              id="rotateImg"
+              src="./assets/theme.svg"
+              class="transition-transform duration-400"
+              alt=""
+            />
           </button>
         </div>
       </div>
@@ -57,18 +73,19 @@
       <div class="flex justify-between gap-4">
         <div class="bg-[#FFFFFF] mt-3 w-3/4 rounded-2xl p-2 shadow">
           <!-- top 3 cards -->
-          <div class="flex gap-4 p-4">
+          <div class="flex gap-4 p-4 justify-between">
             <div class="bg-[#F4F7FF] p-4 rounded-lg flex items-center gap-4">
               <div class="bg-[#FFFFFF] p-4 rounded-full w-14 h-14">
                 <img src="./assets/checkbox.svg" alt="" />
               </div>
               <div class="">
                 <p class="text-md font-medium">Task Assigned</p>
-                <p class="text-3xl font-bold">06</p>
+                <p id="tasks-count" class="text-2xl font-bold">6</p>
               </div>
             </div>
             <div
-              id="discover-div" class="bg-gradient-to-r from-[#3752FD] via-[#6C7FFA] to-[#9BA8F8] flex justify-center items-center gap-3 p-4 rounded-lg text-white"
+              id="discover-div"
+              class="bg-gradient-to-r from-[#3752FD] via-[#6C7FFA] to-[#9BA8F8] flex justify-center items-center gap-3 p-4 rounded-lg text-white"
             >
               <img src="./assets/fi_18577309.svg" class="h-20 w-20" alt="" />
               <p class="text-[20px]">Discover Something New Today!</p>
@@ -89,16 +106,70 @@
 
           <!-- 6 cards -->
 
-          <div class="grid grid-cols-3 gap-5 mt-6 m-4">
+          <div id="main-container" class="grid grid-cols-3 gap-5 mt-6 m-4">
             <div class="bg-[#F4F7FF] p-4 rounded-lg shadow">
               <span class="bg-[#FFFFFF] px-3 py-2 rounded-full text-sm"
                 >Shop Ease</span
               >
               <h2 class="text-2xl font-medium mt-4">Fix Mobile Button Issue</h2>
               <div class="bg-[#FFFFFF] overflow-hidden rounded-lg mt-3">
-                <p class="text-gray-600 text-sm p-2">
-                  A card component has a figure, a body d
-                  part...hsfsfdfshffffffffffffffffffffffff ...sdjfhhafhfhyfa
+                <p class="text-gray-600 text-sm p-2 text-justify">
+                  Debug using Chrome DevTools, check for overlapping elements,
+                  and ensure onClick works properly and ensure onClick works
+                  properly
+                </p>
+              </div>
+
+              <hr class="mt-3 border-t-1 border-dashed border-[#3752FD]" />
+              <div class="flex justify-between items-center mt-3">
+                <p class="mt-2 text-gray-500">
+                  <span class="text-[1rem]">Deadline</span><br />
+                  <span class="font-bold">25 March 2025</span>
+                </p>
+
+                <button
+                  class="mt-2 bg-[#3752FD] text-white px-4 py-2 rounded-lg relative"
+                >
+                  Completed
+                </button>
+              </div>
+            </div>
+            <div class="bg-[#F4F7FF] p-4 rounded-lg shadow">
+              <span class="bg-[#FFFFFF] px-3 py-2 rounded-full text-sm"
+                >CloudSync</span
+              >
+              <h2 class="text-2xl font-medium mt-4">Add Dark Mode</h2>
+              <div class="bg-[#FFFFFF] overflow-hidden rounded-lg mt-3">
+                <p class="text-gray-600 text-sm p-2 text-justify">
+                  Store the user's preference in localStorage, update CSS
+                  variables dynamically, and apply a smooth transition effect.
+                </p>
+              </div>
+
+              <hr class="mt-3 border-t-1 border-dashed border-[#3752FD]" />
+              <div class="flex justify-between items-center mt-3">
+                <p class="mt-2 text-gray-500">
+                  <span class="text-[1rem]">Deadline</span><br />
+                  <span class="font-bold">21 March 2025</span>
+                </p>
+
+                <button
+                  class="mt-2 bg-[#3752FD] text-white px-4 py-2 rounded-lg"
+                >
+                  Completed
+                </button>
+              </div>
+            </div>
+            <div class="bg-[#F4F7FF] p-4 rounded-lg shadow">
+              <span class="bg-[#FFFFFF] px-3 py-2 rounded-full text-sm"
+                >SwiftPay</span
+              >
+              <h2 class="text-2xl font-medium mt-4">Optimize Home page </h2>
+              <div class="bg-[#FFFFFF] overflow-hidden rounded-lg mt-3">
+                <p class="text-gray-600 text-sm p-2 text-justify">
+                  Debug using Chrome DevTools, check for overlapping elements,
+                  and ensure onClick works properly and ensure onClick works
+                  properly
                 </p>
               </div>
 
@@ -118,14 +189,12 @@
             </div>
             <div class="bg-[#F4F7FF] p-4 rounded-lg shadow">
               <span class="bg-[#FFFFFF] px-3 py-2 rounded-full text-sm"
-                >Shop Ease</span
+                >Meta</span
               >
-              <h2 class="text-2xl font-medium mt-4">Fix Mobile Button Issue</h2>
+              <h2 class="text-2xl font-medium mt-4">Add new emoji 🤲</h2>
               <div class="bg-[#FFFFFF] overflow-hidden rounded-lg mt-3">
-                <p class="text-gray-600 text-sm p-2">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Porro, quis. Delectus esse hic cupiditate illum nemo sed
-                  alias, totam reprehenderit.
+                <p class="text-gray-600 text-sm p-2 text-justify">
+                  Adding this emoji will enhance communication by providing users with a better way to express emotion ,it holds cultural, social, or linguistic importance.
                 </p>
               </div>
 
@@ -133,7 +202,7 @@
               <div class="flex justify-between items-center mt-3">
                 <p class="mt-2 text-gray-500">
                   <span class="text-[1rem]">Deadline</span><br />
-                  <span class="font-bold">25 March 2025</span>
+                  <span class="font-bold">10 April 2025</span>
                 </p>
 
                 <button
@@ -145,13 +214,13 @@
             </div>
             <div class="bg-[#F4F7FF] p-4 rounded-lg shadow">
               <span class="bg-[#FFFFFF] px-3 py-2 rounded-full text-sm"
-                >Shop Ease</span
+                >Google LLC</span
               >
-              <h2 class="text-2xl font-medium mt-4">Fix Mobile Button Issue</h2>
+              <h2 class="text-2xl font-medium mt-4">Integrate OpenAI API </h2>
               <div class="bg-[#FFFFFF] overflow-hidden rounded-lg mt-3">
-                <p class="text-gray-600 text-sm p-2">
-                  A card component has a figure, a body d
-                  part...hsfsfdfshffffffffffffffffffffffff ...sdjfhhafhfhyfa
+                <p class="text-gray-600 text-sm p-2 text-justify">
+                  Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
+                  and ensure onClick works properly
                 </p>
               </div>
 
@@ -159,7 +228,7 @@
               <div class="flex justify-between items-center mt-3">
                 <p class="mt-2 text-gray-500">
                   <span class="text-[1rem]">Deadline</span><br />
-                  <span class="font-bold">25 March 2025</span>
+                  <span class="font-bold">25 june 2025</span>
                 </p>
 
                 <button
@@ -171,13 +240,12 @@
             </div>
             <div class="bg-[#F4F7FF] p-4 rounded-lg shadow">
               <span class="bg-[#FFFFFF] px-3 py-2 rounded-full text-sm"
-                >Shop Ease</span
+                >Glassdoar</span
               >
-              <h2 class="text-2xl font-medium mt-4">Fix Mobile Button Issue</h2>
+              <h2 class="text-2xl font-medium mt-4">Improve Job searching </h2>
               <div class="bg-[#FFFFFF] overflow-hidden rounded-lg mt-3">
-                <p class="text-gray-600 text-sm p-2">
-                  A card component has a figure, a body d
-                  part...hsfsfdfshffffffffffffffffffffffff ...sdjfhhafhfhyfa
+                <p class="text-gray-600 text-sm p-2 text-justify">
+                  Store the user's preference in localStorage, update CSS variables dynamically, and apply a smooth transition effect.
                 </p>
               </div>
 
@@ -185,85 +253,7 @@
               <div class="flex justify-between items-center mt-3">
                 <p class="mt-2 text-gray-500">
                   <span class="text-[1rem]">Deadline</span><br />
-                  <span class="font-bold">25 March 2025</span>
-                </p>
-
-                <button
-                  class="mt-2 bg-[#3752FD] text-white px-4 py-2 rounded-lg"
-                >
-                  Completed
-                </button>
-              </div>
-            </div>
-            <div class="bg-[#F4F7FF] p-4 rounded-lg shadow">
-              <span class="bg-[#FFFFFF] px-3 py-2 rounded-full text-sm"
-                >Shop Ease</span
-              >
-              <h2 class="text-2xl font-medium mt-4">Fix Mobile Button Issue</h2>
-              <div class="bg-[#FFFFFF] overflow-hidden rounded-lg mt-3">
-                <p class="text-gray-600 text-sm p-2">
-                  A card component has a figure, a body d
-                  part...hsfsfdfshffffffffffffffffffffffff ...sdjfhhafhfhyfa
-                </p>
-              </div>
-
-              <hr class="mt-3 border-t-1 border-dashed border-[#3752FD]" />
-              <div class="flex justify-between items-center mt-3">
-                <p class="mt-2 text-gray-500">
-                  <span class="text-[1rem]">Deadline</span><br />
-                  <span class="font-bold">25 March 2025</span>
-                </p>
-
-                <button
-                  class="mt-2 bg-[#3752FD] text-white px-4 py-2 rounded-lg"
-                >
-                  Completed
-                </button>
-              </div>
-            </div>
-            <div class="bg-[#F4F7FF] p-4 rounded-lg shadow">
-              <span class="bg-[#FFFFFF] px-3 py-2 rounded-full text-sm"
-                >Shop Ease</span
-              >
-              <h2 class="text-2xl font-medium mt-4">Fix Mobile Button Issue</h2>
-              <div class="bg-[#FFFFFF] overflow-hidden rounded-lg mt-3">
-                <p class="text-gray-600 text-sm p-2">
-                  A card component has a figure, a body d
-                  part...hsfsfdfshffffffffffffffffffffffff ...sdjfhhafhfhyfa
-                </p>
-              </div>
-
-              <hr class="mt-3 border-t-1 border-dashed border-[#3752FD]" />
-              <div class="flex justify-between items-center mt-3">
-                <p class="mt-2 text-gray-500">
-                  <span class="text-[1rem]">Deadline</span><br />
-                  <span class="font-bold">25 March 2025</span>
-                </p>
-
-                <button
-                  class="mt-2 bg-[#3752FD] text-white px-4 py-2 rounded-lg"
-                >
-                  Completed
-                </button>
-              </div>
-            </div>
-            <div class="bg-[#F4F7FF] p-4 rounded-lg shadow">
-              <span class="bg-[#FFFFFF] px-3 py-2 rounded-full text-sm"
-                >Shop Ease</span
-              >
-              <h2 class="text-2xl font-medium mt-4">Fix Mobile Button Issue</h2>
-              <div class="bg-[#FFFFFF] overflow-hidden rounded-lg mt-3">
-                <p class="text-gray-600 text-sm p-2">
-                  A card component has a figure, a body d
-                  part...hsfsfdfshffffffffffffffffffffffff ...sdjfhhafhfhyfa
-                </p>
-              </div>
-
-              <hr class="mt-3 border-t-1 border-dashed border-[#3752FD]" />
-              <div class="flex justify-between items-center mt-3">
-                <p class="mt-2 text-gray-500">
-                  <span class="text-[1rem]">Deadline</span><br />
-                  <span class="font-bold">25 March 2025</span>
+                  <span class="font-bold">15 March 2025</span>
                 </p>
 
                 <button
@@ -290,16 +280,9 @@
             </button>
           </div>
           <hr class="mt-3 border-t-1 border-dashed border-[#3752FD]" />
-          <div class="mt-3 flex flex-col gap-3">
-            <div class="bg-[#F4F7FF] rounded-lg p-3 text-[1rem] text-gray-600">
-              you have completed this task
-            </div>
-            <div class="bg-[#F4F7FF] rounded-lg p-3 text-[1rem] text-gray-600">
-              you have completed this task Lorem ipsum dolor, sit amet
-              consectetur adipisicing elit. Pariatur voluptatibus deleniti
-              tempora libero dolorum quod obcaecati labore exercitationem
-              consectetur repellat!
-            </div>
+          <div id="history-container" class="mt-3 flex flex-col gap-3">
+            <div class="history-cards">you have completed this task</div>
+            <div class="history-cards">you have completed this task</div>
           </div>
         </div>
       </div>
