--- a/blogs.html
+++ b/blogs.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blogs</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,8 +25,8 @@
         },
       };
     </script>
-</head>
-<body class="bg-[#F4F7FF] p-4 font-poppins">
+  </head>
+  <body class="bg-[#F4F7FF] p-4 font-poppins">
     <div class="container mx-auto p-6 rounded-xl">
       <!-- Header -->
       <div
@@ -34,22 +34,119 @@
       >
         <div class="flex items-center gap-4">
           <img class="h-12 w-12" src="./assets/logo.svg" alt="" />
-          <div class="text-2xl text-primaryText">
+          <div class="text-2xl text-primaryText hidden md:block lg:block">
             <span>Dev</span>
             <span class="font-bold">Board</span>
           </div>
         </div>
         <div class="flex items-center gap-6">
-            <button
-           id="back-btn"  class="mt-2 bg-[#3752FD] text-white px-4 py-2 rounded-lg"
+          <button
+            id="back-btn"
+            class="mt-2 bg-[#3752FD] text-white px-4 py-2 rounded-lg"
           >
             Back to Desk
           </button>
         </div>
       </div>
+      <!-- Blogs -->
+      <h1 class="text-3xl font-bold text-center my-5">Blogs</h1>
+      <div class="">
+        <!-- q1 -->
+        <div
+          class="bg-[#FFFFFF] flex justify-between items-center gap-3 mb-3 px-4 py-3 rounded-2xl shadow text-primaryText"
+        >
+          <div class="">
+            <h1 class="text-xl font-bold m-2">
+              Question-1: What are the different ways to select an element in
+              the DOM?
+            </h1>
+            <hr
+              class="mt-3 border-t-1 border-dashed border-[#3752FD] my-5 mx-2"
+            />
+            <p class="m-2 text-gray-600">
+              <span class="font-bold">Answer :</span>
+              
+              1. getElementById(): This method is used to select an element by its id attribute.
+              2. getElementsByClassName(): This method is used to select elements by their class name.
+              3. getElementsByTagName(): This method is used to select elements by their tag name.
+              4. querySelector(): This method is used to select the first matching element that matches a specified CSS selector.
+              5. querySelectorAll(): This method is used to select all elements that match a specified CSS selector.
 
+            </p>
+          </div>
+        </div>
+        <!-- q2 -->
+        <div
+          class="bg-[#FFFFFF] flex justify-between items-center gap-3 mb-3 px-4 py-3 rounded-2xl shadow text-primaryText"
+        >
+          <div class="">
+            <h1 class="text-xl font-bold m-2">
+              Question-2: What is the difference between innerHTML, innerText, and textContent ?
+            </h1>
+            <hr
+              class="mt-3 border-t-1 border-dashed border-[#3752FD] my-5 mx-2"
+            />
+            <p class="m-2 text-gray-600">
+              <span class="font-bold">Answer :</span>
+              innerHTML: The innerHTML property sets or returns the HTML content (inner HTML) of an element.
+              innerText: The innerText property sets or returns the text content of the specified node, and all its descendants.
+              textContent: The textContent property sets or returns the text content of the specified node, and all its descendants.
+            </p>
+          </div>
+        </div>
+        <!-- q3 -->
+        <div
+          class="bg-[#FFFFFF] flex justify-between items-center gap-3 mb-3 px-4 py-3 rounded-2xl shadow text-primaryText"
+        >
+          <div class="">
+            <h1 class="text-xl font-bold m-2">
+              Question-3: What is event delegation in the DOM?
+            </h1>
+            <hr
+              class="mt-3 border-t-1 border-dashed border-[#3752FD] my-5 mx-2"
+            />
+            <p class="m-2 text-gray-600">
+              <span class="font-bold">Answer :</span>
+              Event delegation is a technique in which we attach a single event listener to a parent element that will fire for all descendants matching a selector, whether they are present now or added in the future.
+            </p>
+          </div>
+        </div>
+        <!-- q4 -->
+        <div
+          class="bg-[#FFFFFF] flex justify-between items-center gap-3 mb-3 px-4 py-3 rounded-2xl shadow text-primaryText"
+        >
+          <div class="">
+            <h1 class="text-xl font-bold m-2">
+              Question-4: What is event bubbling in the DOM?
+            </h1>
+            <hr
+              class="mt-3 border-t-1 border-dashed border-[#3752FD] my-5 mx-2"
+            />
+            <p class="m-2 text-gray-600">
+              <span class="font-bold">Answer :</span>
+              Event bubbling is a type of event  where the event first triggers on the innermost target element, and then successively triggers on the parents of the target element.
+            </p>
+          </div>
+        </div>
+        <!-- q5 -->
+        <div
+          class="bg-[#FFFFFF] flex justify-between items-center gap-3 mb-3 px-4 py-3 rounded-2xl shadow text-primaryText"
+        >
+          <div class="">
+            <h1 class="text-xl font-bold m-2">
+              Question-5: How do you create, add, and remove elements using JavaScript?
+            </h1>
+            <hr
+              class="mt-3 border-t-1 border-dashed border-[#3752FD] my-5 mx-2"
+            />
+            <p class="m-2 text-gray-600">
+              <span class="font-bold">Answer :</span>
+              To create an element, we can use the document.createElement() method. To add an element to the DOM, you can use the appendChild() method. To remove an element from the DOM, we can use the removeChild() method.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="./scripts/blogs.js"></script>
-</body>
-
+  </body>
 </html>
